--- a/src/scss/stylish-portfolio.css
+++ b/src/scss/stylish-portfolio.css
@@ -1,12 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic%22");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css");
-@import url("https://use.fontawesome.com/releases/v5.2.0/css/all.css");
 body,
 .portfolio-item {
   display: block;
   position: relative;
   overflow: hidden;
-  max-width: 530px;
+  max-width: 100%;
   margin: auto auto 1rem;
 }
 .portfolio-item .caption {
@@ -14,7 +11,7 @@ body,
   height: 100%;
   width: 100%;
   background-color: rgba(33, 37, 41, 0.2);
-  position: absolute;
+  position: relative;
   top: 0;
   bottom: 0;
   z-index: 1;
